fix(api): /auth/delete uses JWT now
